dbeaver/pro#5666 Force pipe update on processor change